<resources>
    <string name="app_name">My B2B</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="already_a_member_login">Already a member? Login</string>


    <string name="pref_file">com.rohit.preference_file</string>

    <string name="pref_login_status">com.rohit.preference_login_status</string>
    <string name="pref_user_name">com.rohit.preference_user_name</string>
    <string name="pref_user_id">com.rohit.preference_user_id</string>
    <string name="pref_refresh_token">com.rohit.preference_refresh_token</string>
    <string name="pref_access_token">com.rohit.preference_access_token</string>
    <string name="pref_password">com.rohit.preference_password</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">LOGO</string>
    <string name="title_activity_bidder">BidderActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
